==> txt1994/ARM/AT32_Template/Library/at32f435_437_spi.c <==
#include "at32f435_437_conf.h"

void SPI_I2S_Reset(SPI_Type *SPI_x) {
    if(SPI_x == SPI1) {
        CRM_Periph_Reset(CRM_SPI1_Periph_Reset, TRUE);
        CRM_Periph_Reset(CRM_SPI1_Periph_Reset, FALSE);
    } else if(SPI_x == SPI2) {
        CRM_Periph_Reset(CRM_SPI2_Periph_Reset, TRUE);
        CRM_Periph_Reset(CRM_SPI2_Periph_Reset, FALSE);
    } else if(SPI_x == SPI3) {
        CRM_Periph_Reset(CRM_SPI3_Periph_Reset, TRUE);
        CRM_Periph_Reset(CRM_SPI3_Periph_Reset, FALSE);
    } else if(SPI_x == SPI4) {
        CRM_Periph_Reset(CRM_SPI4_Periph_Reset, TRUE);
        CRM_Periph_Reset(CRM_SPI4_Periph_Reset, FALSE);
    }
}

void SPI_Default_Para_Init(SPI_Init_Type* SPI_Init_struct) {
    SPI_Init_struct->transmission_Mode = SPI_Transmit_FULL_DUPLEX;
    SPI_Init_struct->master_Slave_Mode = SPI_Mode_SLAVE;
    SPI_Init_struct->mclk_Freq_division = SPI_MCLK_Div_2;
    SPI_Init_struct->first_Bit_transmission = SPI_FIRST_Bit_MSB;
    SPI_Init_struct->frame_Bit_Num = SPI_Frame_8BIT;
    SPI_Init_struct->clock_polarity = SPI_Clock_Polarity_LOW;
    SPI_Init_struct->clock_phase = SPI_Clock_PHASE_1EDGE;
    SPI_Init_struct->cs_Mode_Selection = SPI_CS_Software_Mode;
}

void SPI_Init(SPI_Type* SPI_x, SPI_Init_Type* SPI_Init_struct) {
    SPI_x->i2sctrl_bit.i2smsel = FALSE;

    if(SPI_Init_struct->transmission_Mode == SPI_Transmit_FULL_DUPLEX) {
        SPI_x->ctrl1_bit.slben = FALSE;
        SPI_x->ctrl1_bit.slbtd = FALSE;
        SPI_x->ctrl1_bit.ora = FALSE;
    } else if(SPI_Init_struct->transmission_Mode == SPI_Transmit_SIMPLEX_RX) {
        SPI_x->ctrl1_bit.slben = FALSE;
        SPI_x->ctrl1_bit.slbtd = FALSE;
        SPI_x->ctrl1_bit.ora = TRUE;
    } else if(SPI_Init_struct->transmission_Mode == SPI_Transmit_Half_Duplex_RX) {
        SPI_x->ctrl1_bit.slben = TRUE;
        SPI_x->ctrl1_bit.slbtd = FALSE;
        SPI_x->ctrl1_bit.ora = FALSE;
    } else if(SPI_Init_struct->transmission_Mode == SPI_Transmit_Half_Duplex_TX) {
        SPI_x->ctrl1_bit.slben = TRUE;
        SPI_x->ctrl1_bit.slbtd = TRUE;
        SPI_x->ctrl1_bit.ora = FALSE;
    }

    SPI_x->ctrl1_bit.swcsen = SPI_Init_struct->cs_Mode_Selection;

    if((SPI_Init_struct->master_Slave_Mode == SPI_Mode_MASTER) && (SPI_Init_struct->cs_Mode_Selection == SPI_CS_Software_Mode)) {
        SPI_x->ctrl1_bit.swcsil = TRUE;
    } else {
        SPI_x->ctrl1_bit.swcsil = FALSE;
    }

    SPI_x->ctrl1_bit.msten = SPI_Init_struct->master_Slave_Mode;

    if(SPI_Init_struct->mclk_Freq_division <= SPI_MCLK_Div_256) {
        SPI_x->ctrl2_bit.mdiv3en = FALSE;
        SPI_x->ctrl2_bit.mdiv_h = FALSE;
        SPI_x->ctrl1_bit.mdiv_l = SPI_Init_struct->mclk_Freq_division;
    } else if(SPI_Init_struct->mclk_Freq_division == SPI_MCLK_Div_3) {
        SPI_x->ctrl2_bit.mdiv3en = TRUE;
        SPI_x->ctrl2_bit.mdiv_h = FALSE;
        SPI_x->ctrl1_bit.mdiv_l = 0;
    } else {
        SPI_x->ctrl2_bit.mdiv3en = FALSE;
        SPI_x->ctrl2_bit.mdiv_h = TRUE;
        SPI_x->ctrl1_bit.mdiv_l = SPI_Init_struct->mclk_Freq_division & 0x7;
    }

    SPI_x->ctrl1_bit.ltf = SPI_Init_struct->first_Bit_transmission;
    SPI_x->ctrl1_bit.fbn = SPI_Init_struct->frame_Bit_Num;
    SPI_x->ctrl1_bit.clkpol = SPI_Init_struct->clock_polarity;
    SPI_x->ctrl1_bit.clkpha = SPI_Init_struct->clock_phase;
}

void SPI_Ti_Mode_Enable(SPI_Type* SPI_x, confirm_state new_state) {
    SPI_x->ctrl2_bit.tien = new_state;
}

void SPI_CRC_Next_Transmit(SPI_Type* SPI_x) {
    SPI_x->ctrl1_bit.ntc = TRUE;
}

void SPI_CRC_Polynomial_Set(SPI_Type* SPI_x, uint16_t CRC_poly) {
    SPI_x->cpoly_bit.cpoly = CRC_poly;
}

uint16_t SPI_CRC_Polynomial_Get(SPI_Type* SPI_x) {
    return SPI_x->cpoly_bit.cpoly;
}

void SPI_CRC_Enable(SPI_Type* SPI_x, confirm_state new_state) {
    SPI_x->ctrl1_bit.ccen = new_state;
}

uint16_t SPI_CRC_Value_Get(SPI_Type* SPI_x, SPI_CRC_Direction_Type CRC_direction) {
    if(CRC_direction == SPI_CRC_RX)
        return  SPI_x->rCRC_bit.rcrc;
    else
        return  SPI_x->tCRC_bit.tcrc;
}

void SPI_Hardware_CS_OutPut_Enable(SPI_Type* SPI_x, confirm_state new_state) {
    SPI_x->ctrl2_bit.hwcsoe = new_state;
}

void SPI_Software_CS_Internal_level_Set(SPI_Type* SPI_x, SPI_Software_CS_level_Type level) {
    SPI_x->ctrl1_bit.swcsil = level;
}

void SPI_Frame_Bit_Num_Set(SPI_Type* SPI_x, SPI_Frame_Bit_Num_Type bit_Num) {
    SPI_x->ctrl1_bit.fbn = bit_Num;
}

void SPI_Half_Duplex_Direction_Set(SPI_Type* SPI_x, SPI_Half_Duplex_Direction_Type direction) {
    SPI_x->ctrl1_bit.slbtd = direction;
}

void SPI_Enable(SPI_Type* SPI_x, confirm_state new_state) {
    SPI_x->ctrl1_bit.spien = new_state;
}

void I2S_Default_Para_Init(I2S_Init_Type* I2S_Init_struct) {
    I2S_Init_struct->operation_Mode = I2S_Mode_Slave_TX;
    I2S_Init_struct->audio_protocol = I2S_AUDIO_PROTOCOL_PHILLIPS;
    I2S_Init_struct->audio_sampling_freq = I2S_AUDIO_Frequency_DEFAULT;
    I2S_Init_struct->data_Channel_format = I2S_Data_16BIT_Channel_16BIT;
    I2S_Init_struct->clock_polarity = I2S_Clock_Polarity_LOW;
    I2S_Init_struct->mclk_OutPut_Enable = FALSE;
}

void I2S_Init(SPI_Type* SPI_x, I2S_Init_Type* I2S_Init_struct) {
    CRM_Clocks_Freq_Type clocks_freq;
    uint32_t I2S_SCLK_index = 0;
    uint32_t i2sdiv_index = 2, i2sodd_index = 0, frequency_index = 0;

    /* i2s audio frequency config */
    if(I2S_Init_struct->audio_sampling_freq == I2S_AUDIO_Frequency_DEFAULT) {
        i2sodd_index = 0;
        i2sdiv_index = 2;
    } else {
        CRM_Clocks_Freq_Get(&clocks_freq);
        I2S_SCLK_index = clocks_freq.sclk_freq;

        if((I2S_Init_struct->audio_protocol == I2S_AUDIO_PROTOCOL_PCM_SHORT) || (I2S_Init_struct->audio_protocol == I2S_AUDIO_PROTOCOL_PCM_LONG)) {
            if(I2S_Init_struct->mclk_OutPut_Enable == TRUE) {
                frequency_index = (((I2S_SCLK_index / 128) * 10) / I2S_Init_struct->audio_sampling_freq) + 5;
            } else {
                if(I2S_Init_struct->data_Channel_format == I2S_Data_16BIT_Channel_16BIT)
                    frequency_index = (((I2S_SCLK_index / 16) * 10) / I2S_Init_struct->audio_sampling_freq) + 5;
                else
                    frequency_index = (((I2S_SCLK_index / 32) * 10) / I2S_Init_struct->audio_sampling_freq) + 5;
            }
        } else {
            if(I2S_Init_struct->mclk_OutPut_Enable == TRUE) {
                frequency_index = (((I2S_SCLK_index / 256) * 10) / I2S_Init_struct->audio_sampling_freq) + 5;
            } else {
                if(I2S_Init_struct->data_Channel_format == I2S_Data_16BIT_Channel_16BIT)
                    frequency_index = (((I2S_SCLK_index / 32) * 10) / I2S_Init_struct->audio_sampling_freq) + 5;
                else
                    frequency_index = (((I2S_SCLK_index / 64) * 10) / I2S_Init_struct->audio_sampling_freq) + 5;
            }
        }
    }

    frequency_index = frequency_index / 10;
    i2sodd_index = frequency_index & (uint16_t)0x0001;
    i2sdiv_index = (frequency_index - i2sodd_index) / 2;

    if((i2sdiv_index < 2) || (i2sdiv_index > 0x03FF)) {
        i2sodd_index = 0;
        i2sdiv_index = 2;
    }

    SPI_x->i2sclk_bit.i2sodd = i2sodd_index;

    if(i2sdiv_index > 0x00FF) {
        SPI_x->i2sclk_bit.i2sdiv_h = (i2sdiv_index >> 8) & 0x0003;
        SPI_x->i2sclk_bit.i2sdiv_l = i2sdiv_index & 0x00FF;
    } else {
        SPI_x->i2sclk_bit.i2sdiv_h = 0;
        SPI_x->i2sclk_bit.i2sdiv_l = i2sdiv_index;
    }

    /* i2s audio_protocol set*/
    if(I2S_Init_struct->audio_protocol == I2S_AUDIO_PROTOCOL_PCM_LONG) {
        SPI_x->i2sctrl_bit.pcmfssel = 1;
        SPI_x->i2sctrl_bit.stdsel = 3;
    } else if(I2S_Init_struct->audio_protocol == I2S_AUDIO_PROTOCOL_PCM_SHORT) {
        SPI_x->i2sctrl_bit.pcmfssel = 0;
        SPI_x->i2sctrl_bit.stdsel = 3;
    } else if(I2S_Init_struct->audio_protocol == I2S_AUDIO_PROTOCOL_LSB) {
        SPI_x->i2sctrl_bit.pcmfssel = 0;
        SPI_x->i2sctrl_bit.stdsel = 2;
    } else if(I2S_Init_struct->audio_protocol == I2S_AUDIO_PROTOCOL_MSB) {
        SPI_x->i2sctrl_bit.pcmfssel = 0;
        SPI_x->i2sctrl_bit.stdsel = 1;
    } else if(I2S_Init_struct->audio_protocol == I2S_AUDIO_PROTOCOL_PHILLIPS) {
        SPI_x->i2sctrl_bit.pcmfssel = 0;
        SPI_x->i2sctrl_bit.stdsel = 0;
    }

    /* i2s data_Channel_format set*/
    if(I2S_Init_struct->data_Channel_format == I2S_Data_16BIT_Channel_16BIT) {
        SPI_x->i2sctrl_bit.i2scbn = 0;
        SPI_x->i2sctrl_bit.i2sdbn = 0;
    } else if(I2S_Init_struct->data_Channel_format == I2S_Data_16BIT_Channel_32BIT) {
        SPI_x->i2sctrl_bit.i2scbn = 1;
        SPI_x->i2sctrl_bit.i2sdbn = 0;
    } else if(I2S_Init_struct->data_Channel_format == I2S_Data_24BIT_Channel_32BIT) {
        SPI_x->i2sctrl_bit.i2scbn = 1;
        SPI_x->i2sctrl_bit.i2sdbn = 1;
    } else if(I2S_Init_struct->data_Channel_format == I2S_Data_32BIT_Channel_32BIT) {
        SPI_x->i2sctrl_bit.i2scbn = 1;
        SPI_x->i2sctrl_bit.i2sdbn = 2;
    }

    SPI_x->i2sctrl_bit.i2sclkpol = I2S_Init_struct->clock_polarity;
    SPI_x->i2sclk_bit.i2smclkoe = I2S_Init_struct->mclk_OutPut_Enable;
    SPI_x->i2sctrl_bit.opersel = I2S_Init_struct->operation_Mode;
    SPI_x->i2sctrl_bit.i2smsel = TRUE;
}

void I2S_Enable(SPI_Type* SPI_x, confirm_state new_state) {
    SPI_x->i2sctrl_bit.i2sen = new_state;
}

void SPI_I2S_Interrupt_Enable(SPI_Type* SPI_x, uint32_t SPI_I2S_int, confirm_state new_state) {
    if(new_state != FALSE) {
        SPI_x->ctrl2 |= SPI_I2S_int;
    } else {
        SPI_x->ctrl2 &= ~SPI_I2S_int;
    }
}

void SPI_I2S_DMATransmitter_Enable(SPI_Type* SPI_x, confirm_state new_state) {
    SPI_x->ctrl2_bit.dmaten = new_state;
}

void SPI_I2S_DMA_Receiver_Enable(SPI_Type* SPI_x, confirm_state new_state) {
    SPI_x->ctrl2_bit.dmaren = new_state;
}

void SPI_I2S_Data_Transmit(SPI_Type* SPI_x, uint16_t tx_data) {
    SPI_x->dt = tx_data;
}

uint16_t SPI_I2S_Data_Receive(SPI_Type* SPI_x) {
    return (uint16_t)SPI_x->dt;
}

flag_status SPI_I2S_Flag_Get(SPI_Type* SPI_x, uint32_t SPI_I2S_flag) {
    flag_status status = RESET;

    if ((SPI_x->sts & SPI_I2S_flag) == RESET) {
        status = RESET;
    } else {
        status = SET;
    }

    return status;
}

void SPI_I2S_Flag_Clear(SPI_Type* SPI_x, uint32_t SPI_I2S_flag) {
    if(SPI_I2S_flag == SPI_CCERR_FLAG)
        SPI_x->sts = ~SPI_CCERR_FLAG;
    else if(SPI_I2S_flag == SPI_I2S_RDBF_FLAG)
        UNUSED(SPI_x->dt);
    else if(SPI_I2S_flag == I2S_TUERR_FLAG)
        UNUSED(SPI_x->sts);
    else if(SPI_I2S_flag == SPI_CSPAS_FLAG)
        UNUSED(SPI_x->sts);
    else if(SPI_I2S_flag == SPI_MMERR_FLAG) {
        UNUSED(SPI_x->sts);
        SPI_x->ctrl1 = SPI_x->ctrl1;
    } else if(SPI_I2S_flag == SPI_I2S_ROERR_FLAG) {
        UNUSED(SPI_x->dt);
        UNUSED(SPI_x->sts);
    }
}
